Fondo de menu a negro

--- a/css/us_zephyr_custom_styles4963.css
+++ b/css/us_zephyr_custom_styles4963.css
@@ -93,7 +93,7 @@ h6 {
 .l-subheader.at_middle,
 .l-subheader.at_middle .w-lang-list,
 .l-subheader.at_middle .touch_enabled .w-nav-list.level_1 {
-	background-color: #7049ba;
+	background-color: #000000;
 	}
 	
 /* Header Text Color */
